--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <start-class>am.ik.rsocket.Rsc</start-class>
+        <version.generate.skip>false</version.generate.skip>
     </properties>
 
 
@@ -114,6 +115,7 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
+                            <skip>${version.generate.skip}</skip>
                             <target>
                                 <echo file="${project.build.directory}/generated-sources/java/am/ik/rsocket/Version.java">
                                     package am.ik.rsocket;
@@ -178,7 +180,7 @@
         <profile>
             <id>graal</id>
             <properties>
-                <graal.version>19.2.0.1</graal.version>
+                <graal.version>19.2.1</graal.version>
             </properties>
             <build>
                 <plugins>
