--- a/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
+++ b/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
@@ -6,7 +6,8 @@ Args=--allow-incomplete-classpath \
     --initialize-at-build-time=org.slf4j \
     --initialize-at-build-time=ch.qos.logback \
     --initialize-at-build-time=reactor.netty.ConnectionObserver \
-    --initialize-at-run-time=io.netty.handler.codec.http.websocketx.extensions.compression.DeflateDecoder \
+    --initialize-at-run-time=io.netty.handler.codec.http.websocketx.extensions.compression.DeflateDecoder,io.netty.util.internal.logging.Log4JLogger \
+    --initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext,io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator,io.netty.handler.ssl.ReferenceCountedOpenSslEngine,io.netty.handler.ssl.ConscryptAlpnSslEngine,io.netty.handler.ssl.JettyNpnSslEngine \
     -H:IncludeResourceBundles=joptsimple.HelpFormatterMessages \
     -H:IncludeResourceBundles=joptsimple.ExceptionMessages \
     -Dfile.encoding=UTF-8
