--- a/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
+++ b/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
@@ -1,6 +1,7 @@
 Args=--allow-incomplete-classpath \
     --report-unsupported-elements-at-runtime \
     --no-fallback \
+    --enable-all-security-services \
     -Dio.netty.noUnsafe=true \
     -H:+TraceClassInitialization \
     --initialize-at-build-time=org.slf4j \
