--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         gu install native-image
         ./mvnw package -Pgraal
         mv target/classes/rsc* ./rsc
+    - name: check-cli
+      run: |        
         ./rsc --version
         ./rsc ws://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
         ./rsc wss://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
