--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,13 @@ jobs:
         ./rsc --version
         ./rsc ws://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
         ./rsc wss://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
+  build-on-win:
+    runs-on: windows-latest
+    name: build-on-win
+    steps:
+    - uses: actions/checkout@v1
+    - uses: DeLaGuardo/setup-graalvm@1.0
+      with:
+        graalvm-version: '19.2.1'
+    - run: |
+        ./mvnw package -Pgraal
