--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,5 @@ jobs:
       with:
         graalvm-version: '19.2.1'
     - run: |
+        gu install native-image
         ./mvnw package -Pgraal
