--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,5 @@ jobs:
       with:
         graalvm-version: '19.2.1'
     - run: |
-        dir C:\hostedtoolcache\windows\GraalVM\19.2.1\x64\bin
+        native-image.cmd
+        C:\hostedtoolcache\windows\GraalVM\19.2.1\x64\bin\native-image.cmd
