--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,12 @@ jobs:
     - uses: DeLaGuardo/setup-graalvm@1.0
       with:
         graalvm-version: '19.2.1'
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - run: |
-        ./mvnw dependency:copy-dependencies -DoutputDirectory=lib package -Plib -Dmaven.test.skip=true
+        ./mvnw dependency:copy-dependencies -DoutputDirectory=lib -DskipTests=true package -Plib
         native-image.cmd -cp "lib/*;target/*"  -H:Class=am.ik.rsocket.Rsc -H:Name=rsc-windows-x86_64
