--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,4 @@ jobs:
           ${{ runner.os }}-maven-
     - run: |
         ./mvnw dependency:copy-dependencies -DoutputDirectory=lib -DskipTests=true package -Plib
+        native-image.cmd -cp "lib/*;target/*" -H:+ReportExceptionStackTraces -H:Class=am.ik.rsocket.Rsc -H:Name=rsc-windows-x86_64
