--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     - name: check-cli
       run: |        
         ./rsc --version
+        ./rsc --show-system-properties
         ./rsc ws://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
         ./rsc wss://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
   build-on-win:
