--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
     - name: check-cli
       run: |        
         ./rsc --version
-        ./rsc ws://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
-        ./rsc wss://rsocket-demo.herokuapp.com/ws --request -d 'Hello World!' --debug
+        ./rsc ws://rsocket-demo.herokuapp.com/rsocket --route searchTweets --stream -d Trump --take 3 --debug
+        ./rsc wss://rsocket-demo.herokuapp.com/rsocket --route searchTweets --stream -d Trump --take 3 --debug
