--- a/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
+++ b/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/native-image.properties
@@ -11,4 +11,5 @@ Args=--allow-incomplete-classpath \
     --initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext,io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator,io.netty.handler.ssl.ReferenceCountedOpenSslEngine,io.netty.handler.ssl.ConscryptAlpnSslEngine,io.netty.handler.ssl.JettyNpnSslEngine \
     -H:IncludeResourceBundles=joptsimple.HelpFormatterMessages \
     -H:IncludeResourceBundles=joptsimple.ExceptionMessages \
+    -H:EnableURLProtocols=http,https \
     -Dfile.encoding=UTF-8
