Convert to Spring Boot project closes gh-47 also bump GraalVM to 20.3.0 closes gh-23 JAVA_HOME is no longer required for TLS request closes gh-46

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ jobs:
         - macos-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: DeLaGuardo/setup-graalvm@1.0
+    - uses: DeLaGuardo/setup-graalvm@master
       with:
-        graalvm-version: '19.2.1'
+        graalvm-version: '20.3.0.java8'
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
