--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         os:
         - ubuntu-latest
         - macos-latest
+        - windows-latest
     steps:
     - uses: actions/checkout@v1
     - uses: DeLaGuardo/setup-graalvm@master
