--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,12 @@ jobs:
         set -ex
         mkdir dist
         gu install native-image
-        ./mvnw package -Pnative
+        ./mvnw package -DskipTests
+        cp target/rsc*.jar ./dist/
+        ./mvnw package -Dversion.generate.skip=true -Pnative
         chmod +x target/classes/rsc*
         cp target/classes/rsc* ./rsc
         cp target/classes/rsc* ./dist/
-        ./mvnw package -Dversion.generate.skip=true -DskipTests
-        cp target/rsc*.jar ./dist/
         if [ -f ./dist/rsc-linux-x86_64 ];then
           mv ./dist/rsc-linux-x86_64 ./dist/rsc-x86_64-pc-linux
         fi
