--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
     - name: e2e-test
       run: |
         set -e
-        ./run-e2e.sh ./rsc
+        ./run-e2e.sh ./rsc ${{ runner.os }}
     - name: upload-dist
       uses: actions/upload-artifact@v1
       with:
