--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,11 @@ jobs:
           mv ./dist/rsc-osx-x86_64 ./dist/rsc-x86_64-apple-darwin
         fi
         ls -la ./dist
+    - uses: crazy-max/ghaction-upx@v1
+      with:
+        version: latest
+        file: ./rsc ./dist/rsc-x86_64*
+        args: -fq
     - name: e2e-test
       run: |
         set -e
